# sfl

./: Makefile  SFL.bnf  SFL.cf  interpreter.cabal  xx.hs
Exceptions/: EvalErrors.hs  TypeErrors.hs  Types.hs  Utils.hs
Interpreter/: Evaluator.hs  Main.hs  PatEval.hs  Show.hs  Types.hs  Utils.hs
StdLib/: Operators.hs
TypeChecker/: FTV.hs  HMUtils.hs  HindleyMilner.hs  Infer.hs  Show.hs  Types.hs  Utils.hs
UserTypes/: Declare.hs  Vals.hs
bad/: fun.sfl  types.sfl  types2.sfl  types3.sfl  zero.sfl
good/: fib.sfl  fun.sfl  lambda.sfl  lamda.sfl  list.sfl  usertypes.sfl
